# pyGCO

./: .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  appveyor.yml  pyproject.toml  setup.cfg  setup.py  test_examples.py
.github/: dependabot.yml
.github/workflows/: ci-package.yml  ci-testing.yml  code-format.yml  release-pypi.yml
gco/: __init__.py  pygco.py
src/gco/: __init__.py  pygco.py
tests/: requirements.txt  test_examples.py
