[metadata]
long_description = file:README.md
long_description_content_type = text/markdown


[tool:pytest]
addopts =
    --doctest-modules
    --color=yes
log_cli = 1
log_cli_level = CRITICAL
#log_cli_format = %(message)s
log_file = pytest.log
log_file_level = DEBUG
#log_file_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
#log_file_date_format=%Y-%m-%d %H:%M:%S
filterwarnings = ignore::FutureWarning


[flake8]
# http://flake8.pycqa.org/en/latest/user/configuration.html
ignore =
    E402  # module level import not at top of file
    E731  # do not assign a lambda expression, use a def
    W503  # line break occurred before a binary operator
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# max-complexity = 10
